--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -30,5 +30,16 @@ a{
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.countryContainer{
+  width: max-content;
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 2rem;
 }
